--- a/IMS/src/main/resources/templates/candidateList.html
+++ b/IMS/src/main/resources/templates/candidateList.html
@@ -41,7 +41,7 @@
             <i class="fa-regular fa-comments"></i>
             <div>Interview</div>
         </a>
-        <a href="#" class="remain">
+        <a href="offerList.html" class="remain">
             <i class="fa-regular fa-file-lines"></i>
             <div>Offer</div>
         </a>
@@ -63,14 +63,14 @@
         <div id="CandidateList" class="tabcontent">
             <div class="candidate-section">
                 <header>
-                    <input type="text" placeholder="Search by name..." />
-                    <select>
+                    <input type="text" placeholder="Search by name..." class="search-box" />
+                    <select class="status-select">
                         <option value="">Filter by status</option>
                         <option value="interviewed">Interviewed</option>
                         <option value="hired">Hired</option>
                         <option value="rejected">Rejected</option>
                     </select>
-                    <button>Add New Candidate</button>
+                    <button class="add-button">Add New Candidate</button>
                 </header>
                 <table>
                     <thead>
