--- a/IMS/src/main/resources/templates/home.html
+++ b/IMS/src/main/resources/templates/home.html
@@ -41,7 +41,7 @@
             <i class="fa-regular fa-comments"></i>
             <div>Interview</div>
         </a>
-        <a href="#" class="remain">
+        <a href="offerList.html" class="remain">
             <i class="fa-regular fa-file-lines"></i>
             <div>Offer</div>
         </a>
